<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JobTracking</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="date">Set Date</string>
    <string name="contacted">Contacted:</string>
    <string name="address">Address:</string>
    <string name="comm">Communicated By:</string>
    <string name="status">Current Status:</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="resume">Resume</string>
	<string name="co_phone">Company Phone:</string>
	<string name="position">Position:</string>
	<string name="company">Company:</string>
	<string name="note">Note:</string>
	<string name="add">Add</string>
	<string name="reset">Reset</string>
	<string name="history">History</string>
</resources>